--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemon Reserve a Table Capstone Project"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="og:title" content="Little Lemon Reserve a Table Capstone Project"/>
+    <meta name="og:description" content="Little Lemon Reserve a Table Capstone Project"/>
+    <meta name="og:image" content="%PUBLIC_URL%/logo192.png"/>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/Logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon Reserve a Table Capstone Project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
