--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Markazi Text' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -29,6 +32,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Little Lemon Reserve a Table Capstone Project</title>
+    <script src="https://kit.fontawesome.com/66421ce76f.js" crossorigin="anonymous" ></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
